<resources>

    <string name="welcome_to_healthmate" />
    <string name="today_pills" />
    <string name="healthmate">HealthMate</string>
    <string name="pill_icon">Pill Icon</string>
    <string name="before_breakfast">Before Breakfast</string>
    <string name="white_tablet">White Tablet</string>
    <string name="add_pill">Add Pill</string>
    <string name="workout_routine">Workout Routine</string>
</resources>