<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAD1DC"
    tools:context=".MainActivity">

    <!-- App Title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthmate"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Today Pills Section -->
    <TextView
        android:id="@+id/todayPillsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today Pills"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        tools:ignore="HardcodedText" />

    <!-- Medicine Reminder Cards -->
    <androidx.cardview.widget.CardView
        android:id="@+id/medicineCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/todayPillsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/medicineIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/medical"
                android:contentDescription="@string/pill_icon"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/medicineName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_tablet"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/medicineTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/before_breakfast"
                    android:textSize="14sp"
                    android:textColor="#642828"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/addPillButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:contentDescription="@string/add_pill"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Workout Routine Button -->
    <Button
        android:id="@+id/workoutRoutineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_routine"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#BFADAD"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/medicineCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
